# jpstock_watchlist

./: .env.example  .gitignore  README.md  lefthook.yml  main.py  mise.toml  pyproject.toml  pyrightconfig.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
src/jpstock_watchlist/: __init__.py  fetcher.py  formatter.py  models.py
tests/: test_sample.py
