[project]
name = "jpstock-watchlist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.12.5",
    "tabulate>=0.9.0",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.8.4",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "RUF", # Ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.ruff.lint.isort]
known-first-party = ["jpstock_watchlist"]

[tool.pyright]
include = ["src", "main.py", "tests"]
exclude = ["**/__pycache__", ".venv"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
pythonVersion = "3.13"
pythonPlatform = "Linux"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jpstock_watchlist"]
